# django-debug-requests-responses

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  tox.yml
ddrr/: __init__.py  apps.py  filters.py  formatters.py  helpers.py  loggers.py  middleware.py  records.py  utils.py
ddrr/templates/ddrr/: default-request.html  default-response.html
ddrr/templatetags/: ddrr.py
example/app/: apps.py  views.py
example/app/templates/app/: index.html
example/example/: settings.py  urls.py
tests/: settings.py  test_filters.py  test_formatters.py  test_middleware.py  test_utils.py  urls.py  utils.py  views.py
