[tool.poetry]
name = "ddrr"
version = "2.0.0"
description = "Print request and response headers, body (with pretty-printing), etc."
readme = "README.md"
authors = ["Deniz Dogan <denizdogan@users.noreply.github.com>"]
repository = "https://github.com/denizdogan/django-debug-requests-responses"
homepage = "https://github.com/denizdogan/django-debug-requests-responses"
keywords = ["django", "debug", "requests", "responses", "logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
attrs = "^19.1"
Django = ">=2.0"
python = "^3.6"
lxml = {version = "^4.3", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
faker = "^2.0.1"
faker_web = "^0.3.1"
flake8 = "^3.7"
flake8-black = {version="^0.1.1", python = "^3.6"}
flake8-bugbear = { version = "^19.3", python = "^3.5"}
flake8-isort = "^2.7"
isort = "^4.3"
pre-commit = "^1.16"
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pytest-django = "^3.5.1"
pytest-mock = "^1.10"
pytest-runner = "^5.1"
tox = "^3.14.0"

[tool.poetry.extras]
xml = ["lxml"]

[tool.black]
target-version = ['py36', 'py37', 'py38']
line-length = 79

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
