[tool.poetry]
name = "ddrr"
version = "3.1.0"
description = "Print request and response headers, body (with pretty-printing), etc."
readme = "README.md"
authors = ["Deniz Dogan <denizdogan@users.noreply.github.com>"]
repository = "https://github.com/denizdogan/django-debug-requests-responses"
homepage = "https://github.com/denizdogan/django-debug-requests-responses"
keywords = ["django", "debug", "requests", "responses", "logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
Django = ">=3.2, <4.2"
attrs = "~22.2.0"
lxml = {version = "^4.9.2", optional = true}
python = ">=3.8.1, <3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-isort = "^5.0.3"
isort = "^5.11.5"
pre-commit = "^2.21.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
faker = "^17.0.0"
faker_web = "^0.3.1"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
tox = "^4"

[tool.poetry.extras]
xml = ["lxml"]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
required-version = '23'

[tool.isort]
profile = "black"
force_single_line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
